--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>EaglerCraft Hacker Client List</title>
         <meta charset="utf-8">
     </head>
-    <body background="background.jpg">
+    <body background="./background.jpg">
     <div align="center">
         <h1>EaglerCraft Hacker Client List</h1>
         <h2>EaglerCraft 辅助客户端收录页面</h2>
@@ -19,6 +19,8 @@
         <li><a href="./nit_client.html">nit_client</a></li>
         <li><a href="./OddFuture.html">OddFuture</a></li>
     </ul>
+    <br>
+    <p>By Gen</p>
     </div>
     </body>
 </html>
